--- a/app/ui/src/Pages/Project/components/ProjectNavigation/components/NavigationButton/NavigationButton.module.scss
+++ b/app/ui/src/Pages/Project/components/ProjectNavigation/components/NavigationButton/NavigationButton.module.scss
@@ -48,7 +48,10 @@
 }
 
 .navCollapsed {
-  //background-color: aqua;
+  justify-content: center;
+  .label {
+    display: none;
+  }
 }
 
 .collapsed .icon {
